style.css
@font-face {
	font-family: EmojiOne;
	src: url(EmojiOneColor-SVGinOT.ttf);
}
@font-face {
	font-family: Symbola;
	src: url(Symbola.ttf);
}
body {
	font-family: sans-serif;
	margin: 1em;
	font-size: 16px;
}
th {
	text-align: left;
}
.mono {
	font-family: monospace;
}
#grid {
	border-collapse: collapse;
	float: left;
	table-layout: fixed;
}
#grid td {
	padding: 0;
	border: 1px solid #c0c0c0;
}
#grid div, #big {
	font-family: EmojiOne, Symbola;
}
#grid div, #cp, #big {
	height: 1.5em;
	line-height: 1.5em;
	text-align: center;
	overflow: hidden;
}
#grid div {
	font-size: 1.5em;
	width: 1.5em;
	cursor: default;
}
#grid div.selected, #infotop {
	background: #c0c0c0;
}
#info {
	float: left;
	border: 1px solid #c0c0c0;
	border-left: none;
	width: 24em;
	height: 591px; /* 16 * 36 + 15 */
}
#infotop {
	height: 222px; /* 6 * 36 + 6 */
}
#cp {
	margin: 0 auto;
	width: 12em;
}
#big {
	margin: 0 auto;
	font-size: 8em;
	width: 2.75em;
}
#loading {
	height: 369px; /* 10 * 36 + 9 */
	line-height: 369px;
	text-align: center;
	background: #e0e0e0;
}
#loading_files {
	display: none;
}
#ui {
	display: none;
}
#ui_content {
	height: 332px;
	overflow-y: scroll;
}
#ui_content > div {
	margin: 1em;
}
#ui_content > div:not(#data) {
	display: none;
}
#about {
	font-size: 12px;
}
#ui_tabs {
	background: #c0c0c0;
}
#ui_tabs a {
	display: inline-block;
	color: black;
	text-decoration: none;
	padding: 9px;
}
#ui_tabs a.selected {
	background: #808080;
	color: white;
}
#data_name {
	font-weight: bold;
}
#data_table_first {
	margin-top: 1em;
	border-top: 1px solid #c0c0c0;
}
#data table {
	width: 100%;
	border-bottom: 1px solid #c0c0c0;
}
#data th, #data td {
	padding: 0.25em;
}
#data td {
	text-align: right;
}
#search_form {
	margin-bottom: 1em;
}
#search_query {
	width: 100%;
	margin-bottom: 0.5em;
}
#search_results div {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	cursor: default;
}
#search_results div:hover {
	background: #c0c0c0;
}
#goto table {
	width: 100%;
}
#goto input {
	font-size: 2em;
	width: 6em;
}
#goto_hex, #goto_dec {
	font-family: monospace;
}
#goto_char {
	font-family: Symbola;
}

